products/sektor-btp/deploy/k8s/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sektor-btp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/hsts: "false"
    nginx.ingress.kubernetes.io/hsts-max-age: "0"
spec:
  tls: []
  rules:
    - host: api.sektor.nafuralabs.staging
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sektor-btp-backend
                port:
                  number: 8082
    - host: sektor.nafuralabs.staging
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sektor-btp-web
                port:
                  number: 80
